// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VidKing handle imdb movie 1`] = `
[
  {
    "meta": {
      "adaptive": true,
      "countryCodes": [
        "multi",
      ],
      "height": undefined,
      "referer": "https://www.vidking.net/",
      "title": "Fight Club (1999) · Yoru",
    },
    "url": "https://moon.ironwallnet.net/vd/OXN3d0w5Q1pyVGNmVFNmZFpLeERhQTo0VTdCeWtXM2Q2UEJyb2M5bm91UnhB/master.m3u8",
  },
]
`;

exports[`VidKing handle imdb series 1`] = `
[
  {
    "meta": {
      "adaptive": true,
      "countryCodes": [
        "multi",
      ],
      "height": undefined,
      "referer": "https://www.vidking.net/",
      "title": "Black Mirror S04E02 · Yoru",
    },
    "url": "https://moon.ironwallnet.net/r2/cdn2/T0pBQUZxR1g3WF90R3ZiMnFXSE1GUTpvRVJMblBvaWVYTE94elVtdEJIRDQ3Y0JBUDctWHlGU1dtekFhOUo0TzhsaXg3MDZ0aDNkNTdLd1F3aHd2ODhmeUs2UXotTmw5cVZCblZWZXBtUHdRcDZOdGJVZElUdkZJVXRWMmd5OURqZw/playlist.m3u8",
  },
]
`;
